--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,13 @@
-<div class="my-3 d-flex">
-  <h2 class="text-primary mx-5"> <i class="fa-solid fa-cart-shopping"></i> {{title}}</h2>
-  <h1 class="text-center mx-5"> <i class="fa-solid fa-house"></i> Welcome Ngx-Bootstrap</h1>
+<app-nav-bar></app-nav-bar>
+
+<div class="container" style="margin-top: 140px;">
+  <h2 class="text-center">Welcome to {{title}}</h2>
+
+  <ul>
+    <li class="list-unstyled d-flex" *ngFor="let product of products">
+      <h2 class="div text-dark me-4">{{product.name}}</h2>
+      <h4 class="div text-primary">{{product.price}}</h4>
+    </li>
+  </ul>
+
 </div>
