--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -2,16 +2,16 @@
     bg-white border-bottom fixed-top shadow-sm">
     <img src="../../assets/logo.png" alt="logo" class="logo" style="max-height: 70px;" routerLink="/">
     <nav class="my-2 fs-4">
-        <a href="/" class="p-2 mx-2 text-dark text-decoration-none">Home</a>
-        <a href="/" class="p-2 mx-2 text-dark text-decoration-none">Shop</a>
+        <a [routerLink]="['/']" routerLinkActive="router-link-active" class="p-2 mx-2 text-dark text-decoration-none">Home</a>
+        <a class="p-2 mx-2 text-dark text-decoration-none">Shop</a>
         <a href="/" class="p-2 mx-2 text-dark text-decoration-none">Errors</a>
     </nav>
     <div class="d-flex align-items-center">
         <a href="/" class="position-relative">
             <i class="fa fa-shopping-cart fa-2x me-5 text-dark"></i>
-            <div class="cart-no">5</div>
+            <div async class="cart-no">5</div>
         </a>
-            <a href="/" class="btn btn-outline-primary me-2">Login</a>
-            <a href="/" class="btn btn-outline-secondary me-3">Sign up</a>
+            <a href="/" class="btn btn-outline-main me-2">Login</a>
+            <a href="/" class="btn btn-outline-alt me-3">Sign up</a>
     </div>
 </header>
