updating the bootstrap theme from bootswatch

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,5 +1,4 @@
-<header class="d-flex flex-row align-items-center justify-content-between p-3 px-4 mb-3
-    bg-white border-bottom fixed-top shadow-sm">
+<header class="d-flex flex-row align-items-center justify-content-between p-3 px-4 mb-3 bg-white border-bottom fixed-top shadow-sm">
     <img src="../../assets/logo.png" alt="logo" class="logo" style="max-height: 70px;" routerLink="/">
     <nav class="my-2 fs-4">
         <a [routerLink]="['/']" routerLinkActive="router-link-active" class="p-2 mx-2 text-dark text-decoration-none">Home</a>
