--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm" *ngIf="product">
-  <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-info">
+  <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-dark">
   <div class="card-body d-flex flex-column">
-    <a href="" class="text-decoration-none">
+    <a href="" class="text-decoration-none text-main">
       <h6 class="text-uppercase">
         {{product.name}}
       </h6>
