--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -3,11 +3,11 @@
 
     <!-- Filters-Section -->
     <section class="col-3">
-      <h5 class="text-warning ms-3">Sort</h5>
+      <h5 class="text-warning ms-3 fw-bold">Sort</h5>
       <select class="form-select mb-4" style="cursor: pointer;" (change)="onSortSelected($event)">
         <option *ngFor="let sort of sortOptions" [value]="sort.value">{{sort.name}}</option>
       </select>
-      <h5 class="text-warning ms-3">Brands</h5>
+      <h5 class="text-warning ms-3 fw-bold">Brands</h5>
       <ul class="list-group my-3">
         <li class="list-group-item" *ngFor="let brand of brands"
         style="cursor: pointer;"
@@ -15,7 +15,7 @@
         [value]="brand.id"
         (click)="onBrandSelected(brand.id)">{{brand.name}}</li>
       </ul>
-      <h5 class="text-warning ms-3">Types</h5>
+      <h5 class="text-warning ms-3 fw-bold">Types</h5>
       <ul class="list-group my-3">
         <li class="list-group-item" *ngFor="let type of types"
         style="cursor: pointer;"
