--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-nav-bar></app-nav-bar>
-
 <div class="main-app-content container">
-  <app-shop></app-shop>
+  <router-outlet></router-outlet>
 </div>
 
 <app-footer></app-footer>
