--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,15 +1,15 @@
-<div class="card h-100 shadow-sm" *ngIf="product">
-  <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-dark">
+<div class="card h-100 shadow-sm rounded-3" *ngIf="product">
+  <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-info rounded-top">
   <div class="card-body d-flex flex-column">
-    <a href="" class="text-decoration-none text-main">
+    <a routerLink="/shop/{{product.id}}" class="text-decoration-none text-main">
       <h6 class="text-uppercase">
         {{product.name}}
       </h6>
     </a>
-    <span class="mb-2">{{product.price | currency}}</span>
+    <span class="mb-2 fw-bold">{{product.price | currency}}</span>
     <div class="btn-group mt-auto">
       <button class="btn btn-outline-secondary fa fa-shopping-cart me-2"></button>
-      <button class="btn btn-outline-secondary">View</button>
+      <button routerLink="/shop/{{product.id}}" class="btn btn-outline-secondary">View</button>
     </div>
   </div>
 </div>
