creating an component to test api error responses

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
     <nav class="my-2 fs-4">
         <a [routerLink]="['/']"  class="p-2 mx-2" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
         <a [routerLink]="['/shop']" class="p-2 mx-2" routerLinkActive="active">Shop</a>
-        <a href="/" class="p-2 mx-2" routerLinkActive="active">Errors</a>
+        <a [routerLink]="['/test-error']" href="/" class="p-2 mx-2" routerLinkActive="active">Testing Errors</a>
     </nav>
     <div class="d-flex align-items-center">
         <a href="/" class="position-relative">
