adding additional components for testing errors

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,5 +1,8 @@
 <header class="d-flex flex-row align-items-center justify-content-between p-3 px-4 mb-3 bg-white border-bottom fixed-top shadow-sm">
-    <img src="../../assets/logo.png" alt="logo" class="logo" style="max-height: 70px;" routerLink="/">
+    <div routerLink="/" style="cursor: pointer;">
+      <img src="../../assets/logo.png" alt="logo" class="logo" style="max-height: 70px;">
+      <h4 style="display: inline-block" class="fw-bold text-main">XSO25 e-Commerce</h4>
+    </div>
     <nav class="my-2 fs-4">
         <a [routerLink]="['/']"  class="p-2 mx-2" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
         <a [routerLink]="['/shop']" class="p-2 mx-2" routerLinkActive="active">Shop</a>
