correct writing mistake

--- a/client/src/app/core/server-error/server-error.component.html
+++ b/client/src/app/core/server-error/server-error.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h3 class="text-primary">Internal Server Error - refreshing the error disappear</h3>
+  <h3 class="text-primary">Internal Server Error - refreshing will make the error disappears</h3>
   <ng-container *ngIf="error">
       <h5 class="text-danger">Error: {{error.message}}</h5>
       <p class="fw-bold">This error comes from server, not Angular</p>
