adding section header and breadcrumbs to it

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav-bar></app-nav-bar>
+<app-section-header></app-section-header>
 <div class="main-app-content container">
   <router-outlet></router-outlet>
 </div>
