--- a/client/src/app/core/section-header/section-header.component.html
+++ b/client/src/app/core/section-header/section-header.component.html
@@ -1,4 +1,4 @@
-<section class="py-5 bg-secondary" style="margin-top: 103px;">
+<section class="py-5 bg-dark bg-opacity-10" style="margin-top: 103px;">
   <div class="container">
     <div class="row d-flex align-items-center">
       <div class="col-9">
@@ -7,8 +7,11 @@
       <div class="col-3">
         <nav>
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#" class="text-main">Home</a></li>
-            <li class="breadcrumb-item"><a href="#" class="text-main">Library</a></li>
+            <xng-breadcrumb>
+              <ng-container *xngBreadcrumbItem="let breadcrumb">
+                {{breadcrumb | titlecase}}
+              </ng-container>
+            </xng-breadcrumb>
           </ol>
         </nav>
       </div>
