removing breadcrumb from home page

--- a/client/src/app/core/section-header/section-header.component.html
+++ b/client/src/app/core/section-header/section-header.component.html
@@ -1,20 +1,22 @@
-<section class="py-5 bg-dark bg-opacity-10" style="margin-top: 103px;">
-  <div class="container">
-    <div class="row d-flex align-items-center">
-      <div class="col-9">
-        <h1>Title goes here</h1>
-      </div>
-      <div class="col-3">
-        <nav>
-          <ol class="breadcrumb">
-            <xng-breadcrumb>
-              <ng-container *xngBreadcrumbItem="let breadcrumb">
-                {{breadcrumb | titlecase}}
-              </ng-container>
-            </xng-breadcrumb>
-          </ol>
-        </nav>
+<ng-container *ngIf="$any (bcService.breadcrumbs$ | async) as breadcrumbs">
+  <section *ngIf="breadcrumbs[breadcrumbs.length-1].label !== 'Home'" class="py-5 bg-dark bg-opacity-10" style="margin-top: 103px;">
+    <div class="container">
+      <div class="row d-flex align-items-center">
+        <div class="col-9">
+          <h1>Title goes here</h1>
+        </div>
+        <div class="col-3">
+          <nav>
+            <ol class="breadcrumb">
+              <xng-breadcrumb>
+                <ng-container *xngBreadcrumbItem="let breadcrumb">
+                  {{breadcrumb | titlecase}}
+                </ng-container>
+              </xng-breadcrumb>
+            </ol>
+          </nav>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</ng-container>
