--- a/client/src/app/home/home/home.component.html
+++ b/client/src/app/home/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div style="margin-top: 130px; text-align: center;">
+  <h1>Home Page</h1>
+  <button (click)="toastWelcome()" class="btn btn-outline-alt my-3"><h2>Welcome to XSO25 e-Commerce!</h2></button>
+</div>
