--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,5 +1,13 @@
 <div class="card h-100 shadow-sm rounded-3" *ngIf="product">
-  <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-info rounded-top">
+
+  <div class="image position-relative" style="cursor: pointer;">
+    <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-info rounded-top">
+    <div class="d-flex align-items-center justify-content-center hover-overlay">
+        <button class="btn btn-warning fa fa-shopping-cart me-2"></button>
+        <button routerLink="/shop/{{product.id}}" class="btn btn-warning">View</button>
+    </div>
+  </div>
+
   <div class="card-body d-flex flex-column">
     <a routerLink="/shop/{{product.id}}" class="text-decoration-none text-main">
       <h6 class="text-uppercase">
@@ -7,9 +15,6 @@
       </h6>
     </a>
     <span class="mb-2 fw-bold">{{product.price | currency}}</span>
-    <div class="btn-group mt-auto">
-      <button class="btn btn-outline-secondary fa fa-shopping-cart me-2"></button>
-      <button routerLink="/shop/{{product.id}}" class="btn btn-outline-secondary">View</button>
-    </div>
   </div>
+
 </div>
