--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,4 +1,4 @@
-<div class="card h-100 shadow-sm rounded-3" *ngIf="product">
+<div class="my-4 card h-100 shadow-sm rounded-3" *ngIf="product">
 
   <div class="image position-relative" style="cursor: pointer;">
     <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-info rounded-top">
