adding loading indicators

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,7 @@
+<ngx-spinner size = "large" type = "ball-atom" [fullScreen] = "true">
+  <h3 class="text-light">Loading...</h3>
+</ngx-spinner>
+
 <app-nav-bar></app-nav-bar>
 <app-section-header></app-section-header>
 <div class="main-app-content container">
