building the basket type and adding cuid package

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -9,9 +9,9 @@
         <a [routerLink]="['/test-error']" href="/" class="p-2 mx-2" routerLinkActive="active">Testing Errors</a>
     </nav>
     <div class="d-flex align-items-center">
-        <a href="/" class="position-relative">
+        <a routerLink="/basket" class="position-relative">
             <i class="fa fa-shopping-cart fa-2x me-5 text-dark"></i>
-            <div async class="cart-no">5</div>
+            <div class="cart-no">5</div>
         </a>
             <a href="/" class="btn btn-outline-main me-2">Login</a>
             <a href="/" class="btn btn-outline-alt me-3">Sign up</a>
