--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -3,7 +3,7 @@
   <div class="image position-relative" style="cursor: pointer;">
     <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-info rounded-top">
     <div class="d-flex align-items-center justify-content-center hover-overlay">
-        <button class="btn btn-warning fa fa-shopping-cart me-2"></button>
+        <button (click)="addItemToBasket()" class="btn btn-warning fa fa-shopping-cart me-2"></button>
         <button routerLink="/shop/{{product.id}}" class="btn btn-warning">View</button>
     </div>
   </div>
