--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -76,8 +76,8 @@
           <div class="col-6 offset-6">
             <app-order-totals></app-order-totals>
             <div class="d-grid mb-4">
-              <a routerLink="/checkout" class="btn btn-outline-primary py-2">
-                Proceed to checkout
+              <a [routerLink]="['/checkout']" class="btn btn-outline-primary" routerLinkActive>
+              Proceed to checkout
               </a>
             </div>
           </div>
