--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
               {{getCount(basket.items)}}
             </div>
         </a>
-            <a href="/" class="btn btn-outline-main me-2">Login</a>
-            <a href="/" class="btn btn-outline-alt me-3">Sign up</a>
+            <a routerLink="/auth/login" class="btn btn-outline-main me-2">Login</a>
+            <a routerLink="/auth/register" class="btn btn-outline-alt me-3">Sign up</a>
     </div>
 </header>
