--- a/client/src/app/account/register/register.component.html
+++ b/client/src/app/account/register/register.component.html
@@ -1,1 +1,24 @@
-<p>register works!</p>
+<div class="d-flex justify-content-center mt-5">
+  <div class="col-3">
+    <form>
+      <div class="text-center mb-4">
+        <h1 class="mb-3">Register</h1>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="floatingInput" placeholder="DisplayName">
+        <label for="floatingInput">Display Name</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="email" class="form-control" id="floatingInput" placeholder="Email">
+        <label for="floatingInput">Email address</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
+      </div>
+      <div class="d-grid">
+        <button class="btn btn-lg btn-primary mt-3" type="submit">Sign up</button>
+      </div>
+    </form>
+  </div>
+</div>
