--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -15,7 +15,13 @@
               {{getCount(basket.items)}}
             </div>
         </a>
-            <a routerLink="/auth/login" class="btn btn-outline-main me-2">Login</a>
-            <a routerLink="/auth/register" class="btn btn-outline-alt me-3">Sign up</a>
+            <ng-container *ngIf="(accountService.currentUser$ | async) === null">
+              <a routerLink="/auth/login" class="btn btn-outline-main me-2">Login</a>
+              <a routerLink="/auth/register" class="btn btn-outline-alt me-3">Sign up</a>
+            </ng-container>
+
+            <ng-container *ngIf="accountService.currentUser$ | async as user">
+              <p>Welcome {{user.displayName}}</p>
+            </ng-container>
     </div>
 </header>
