--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -24,7 +24,7 @@
               class="btn btn-outline-main ms-4">{{updateCartBtnText}}</button>
           </div>
           <div class="row mt-4">
-              <h4>Description</h4>
+              <h4 class="text-info">Description</h4>
               <p>{{product.description}}</p>
           </div>
       </div>
