--- a/client/src/app/account/login/login.component.html
+++ b/client/src/app/account/login/login.component.html
@@ -4,16 +4,11 @@
       <div class="text-center mb-4">
         <h1 class="mb-3">Login</h1>
       </div>
-      <div class="form-floating mb-3">
-        <input type="email" formControlName="email" class="form-control" id="floatingInput" placeholder="Email">
-        <label for="floatingInput">Email address</label>
-      </div>
-      <div class="form-floating">
-        <input type="password" formControlName="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">Password</label>
-      </div>
+      <app-text-input [formControl]="loginForm.controls['email']" [label]="'Email Address'"></app-text-input>
+      <app-text-input [formControl]="loginForm.controls['password']" [type]="'password'" [label]="'Password'"></app-text-input>
+
       <div class="d-grid">
-        <button class="btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
+        <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
       </div>
     </form>
   </div>
