--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -15,13 +15,41 @@
               {{getCount(basket.items)}}
             </div>
         </a>
+              <ng-container *ngIf="accountService.currentUser$ | async as user">
+                <div class="dropdown ms-3 me-5" style="cursor: pointer;" dropdown>
+                    <a dropdownToggle class="dropdown-toggle">
+                        <strong>Welcome {{user.displayName}}</strong>
+                    </a>
+                    <ul *dropdownMenu class="dropdown-menu dropdown-menu-right">
+                        <li class="py-1">
+                            <a routerLink="/basket" class="dropdown-item">
+                                <i class="fa fa-shopping-cart me-3"></i> View basket
+                            </a>
+                        </li>
+                        <li class="py-1">
+                            <a routerLink="/orders" class="dropdown-item">
+                                <i class="fa fa-history me-3"></i> View orders
+                            </a>
+                        </li>
+                        <div class="dropdown-divider"></div>
+                        <li class="py-1">
+                          <a routerLink="/" class="dropdown-item">
+                              <i class="fa fa-gear me-3"></i> Settings
+                          </a>
+                        </li>
+                        <div class="dropdown-divider"></div>
+                        <li class="py-1">
+                            <a (click)="accountService.logout()" class="dropdown-item">
+                                <i class="fa fa-sign-out me-3"></i> Logout
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </ng-container>
+
             <ng-container *ngIf="(accountService.currentUser$ | async) === null">
               <a routerLink="/auth/login" class="btn btn-outline-main me-2">Login</a>
               <a routerLink="/auth/register" class="btn btn-outline-alt me-3">Sign up</a>
-            </ng-container>
-
-            <ng-container *ngIf="accountService.currentUser$ | async as user">
-              <p>Welcome {{user.displayName}}</p>
             </ng-container>
     </div>
 </header>
