add async validation for email address existing

--- a/client/src/app/shared/text-input/text-input.component.html
+++ b/client/src/app/shared/text-input/text-input.component.html
@@ -10,4 +10,5 @@
   <div *ngIf="control.errors?.['required']" class="invalid-feedback">Please enter your {{label}}</div>
   <div *ngIf="control.errors?.['email']" class="invalid-feedback">Invalid email address!</div>
   <div *ngIf="control.errors?.['pattern']" class="invalid-feedback">Password not comlex enough</div>
+  <div *ngIf="control.errors?.['emailExists']" class="invalid-feedback">Email address is taken!</div>
 </div>
