creating an auth guard

--- a/client/src/app/account/login/login.component.html
+++ b/client/src/app/account/login/login.component.html
@@ -11,5 +11,10 @@
         <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
       </div>
     </form>
+
+    <div class="mt-5">
+      <h5 class="mt-3">Don't have an email?</h5>
+      <a routerLink="/auth/register" class="text-center text-danger display-6 text-center">Rigster here!</a>
+    </div>
   </div>
 </div>
