--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -1,1 +1,10 @@
-<p>checkout works!</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-8">
+      <app-stepper></app-stepper>
+    </div>
+    <div class="col-4">
+      <app-order-totals></app-order-totals>
+    </div>
+  </div>
+</div>
