creating the delivery form

--- a/client/src/app/shared/stepper/stepper.component.html
+++ b/client/src/app/shared/stepper/stepper.component.html
@@ -1,1 +1,14 @@
-<p>stepper works!</p>
+<div class="container">
+  <ul class="nav nav-pills nav-justified">
+    <li class="nav-item" *ngFor="let step of steps; let i = index">
+      <div class="d-grid">
+        <button class="nav-link py-3 text-uppercase fw-bold" (click)="onClick(i)" [class.active]="selectedIndex === i">
+          {{step.label}}
+        </button>
+      </div>
+    </li>
+  </ul>
+  <div>
+    <ng-container [ngTemplateOutlet]="selected?.content"></ng-container>
+  </div>
+</div>
