--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -1,10 +1,23 @@
 <div class="container mt-5">
-  <div class="row">
-    <div class="col-8">
-      <app-stepper></app-stepper>
+    <div class="row">
+        <div class="col-8">
+            <app-stepper #appStepper>
+                <cdk-step [label]="'Address'">
+                    <app-checkout-address [checkoutForm]="checkoutForm"></app-checkout-address>
+                </cdk-step>
+                <cdk-step [label]="'Delivery'">
+                    <app-checkout-delivery></app-checkout-delivery>
+                </cdk-step>
+                <cdk-step [label]="'Review'">
+                    <app-checkout-review></app-checkout-review>
+                </cdk-step>
+                <cdk-step [label]="'Payment'">
+                    <app-checkout-payment></app-checkout-payment>
+                </cdk-step>
+            </app-stepper>
+        </div>
+        <div class="col-4">
+            <app-order-totals></app-order-totals>
+        </div>
     </div>
-    <div class="col-4">
-      <app-order-totals></app-order-totals>
-    </div>
-  </div>
 </div>
