--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -15,3 +15,12 @@
     </div>
   </div>
 </div>
+
+<div class="d-flex justify-content-between flex-row mb-5">
+  <button class="btn btn-outline-primary" cdkStepperPrevious>
+      <i class="fa fa-angle-left"></i> Back to address
+  </button>
+  <button [disabled]="checkoutForm?.get('deliveryForm')?.invalid" class="btn btn-primary" cdkStepperNext>
+      Go to Review <i class="fa fa-angle-right"></i>
+  </button>
+</div>
