--- a/client/src/app/checkout/checkout-address/checkout-address.component.html
+++ b/client/src/app/checkout/checkout-address/checkout-address.component.html
@@ -1,7 +1,10 @@
 <div class="mt-4" *ngIf="checkoutForm" [formGroup]="checkoutForm">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Shipping Adress</h4>
-    <button class="btn btn-outline-success mb-3">
+    <button class="btn btn-outline-success mb-3"
+    (click)="saveUserAddress()"
+    [disabled]="!checkoutForm.get('addressForm')?.valid ||
+        !checkoutForm.get('addressForm')?.dirty">
       Save as default adress
     </button>
   </div>
@@ -25,4 +28,13 @@
       <app-text-input [label]="'Zip code'" formControlName="zipCode"></app-text-input>
     </div>
   </div>
+</div>
+
+<div class="d-flex justify-content-between flex-row mb-5">
+  <button class="btn btn-outline-primary" routerLink="/basket">
+      <i class="fa fa-angle-left"></i> Back to basket
+  </button>
+  <button [disabled]="checkoutForm?.get('addressForm')?.invalid" class="btn btn-primary" cdkStepperNext>
+      Go to Delivery <i class="fa fa-angle-right"></i>
+  </button>
 </div>
