--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -9,10 +9,10 @@
                     <app-checkout-delivery [checkoutForm]="checkoutForm"></app-checkout-delivery>
                 </cdk-step>
                 <cdk-step [label]="'Review'">
-                    <app-checkout-review></app-checkout-review>
+                    <app-checkout-review appStepper="appStepper"></app-checkout-review>
                 </cdk-step>
-                <cdk-step [label]="'Payment'">
-                    <app-checkout-payment></app-checkout-payment>
+                <cdk-step [label]="'Payment'" [completed]="checkoutForm.get('paymentForm')?.valid">
+                    <app-checkout-payment [checkoutForm]="checkoutForm"></app-checkout-payment>
                 </cdk-step>
             </app-stepper>
         </div>
