update the project

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -5,8 +5,8 @@
     </div>
     <nav class="my-2 fs-4">
         <a [routerLink]="['/']"  class="p-2 mx-2" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-        <a [routerLink]="['/shop']" class="p-2 mx-2" routerLinkActive="active">Shop</a>
-        <a [routerLink]="['/test-error']" href="/" class="p-2 mx-2" routerLinkActive="active">Testing Errors</a>
+        <strong>||</strong>
+        <a [routerLink]="['/products']" class="p-2 mx-2" routerLinkActive="active">Explore Products</a>
     </nav>
     <div class="d-flex align-items-center">
         <a routerLink="/basket" class="position-relative">
