--- a/client/src/app/home/home/home.component.html
+++ b/client/src/app/home/home/home.component.html
@@ -14,8 +14,11 @@
     </slide>
   </carousel>
   <section class="featured">
-    <div class="d-flex justify-content-center pt-4">
+    <div class="text-center pt-4">
       <h1 class="text-main">Welcome to XSO25 e-Commerce!</h1>
+      <button type="button" class="btn btn-primary" [routerLink]="['/products']">
+        Explore Products!
+      </button>
     </div>
   </section>
 </div>
