--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -1,7 +1,7 @@
 <div class="container ms-2">
   <div class="row" *ngIf="product">
-      <div class="col-6">
-          <img src="{{product.pictureURL}}" alt="{{product.name}}" class="w-100">
+      <div class="col-6 my-5">
+          <img src="{{product.pictureURL}}" alt="{{product.name}}" class="w-75 rounded">
       </div>
       <div class="col-6 mt-5">
           <h2>{{product.name}}</h2>
