--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,4 +6,4 @@
 <app-section-header></app-section-header>
 <router-outlet></router-outlet>
 
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
