--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,15 +1,15 @@
 <div class="my-4 card h-100 shadow-sm rounded-3" *ngIf="product">
 
   <div class="image position-relative" style="cursor: pointer;">
-    <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid bg-info rounded-top">
+    <img src="{{product.pictureURL}}" alt="{{product.name}}" class="img-fluid rounded-top p-4">
     <div class="d-flex align-items-center justify-content-center hover-overlay">
-        <button (click)="addItemToBasket()" class="btn btn-warning fa fa-shopping-cart me-2"></button>
-        <button routerLink="/shop/{{product.id}}" class="btn btn-warning">View</button>
+        <button (click)="addItemToBasket()" class="btn btn-warning me-2"><i class="fa-solid fa-cart-shopping"></i></button>
+        <button routerLink="/products/{{product.id}}" class="btn btn-warning">View</button>
     </div>
   </div>
 
   <div class="card-body d-flex flex-column">
-    <a routerLink="/shop/{{product.id}}" class="text-decoration-none text-main">
+    <a routerLink="/products/{{product.id}}" class="text-decoration-none text-main">
       <h6 class="text-uppercase">
         {{product.name}}
       </h6>
