adding not responsive alert at header

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,4 +1,6 @@
-<header class="d-flex flex-row align-items-center justify-content-between p-3 px-4 mb-3 bg-white border-bottom fixed-top shadow-sm">
+<header class="d-grid mb-4 bg-white border-bottom fixed-top shadow-sm">
+  <h6 class="alert alert-warning py-0 pt-2 rounded rounded-0 text-center"><blockquote>App is curruntly not responsive for mobile - We are working on it</blockquote></h6>
+  <div class="d-flex p-3 px-4 flex-row w-100 align-items-center justify-content-between">
     <div routerLink="/" style="cursor: pointer;">
       <img src="../../assets/logo.png" alt="logo" class="logo" style="max-height: 70px;">
       <h4 style="display: inline-block" class="fw-bold text-main">XSO25 e-Commerce</h4>
@@ -52,4 +54,5 @@
               <a routerLink="/auth/register" class="btn btn-outline-alt me-3">Sign up</a>
             </ng-container>
     </div>
+  </div>
 </header>
