--- a/client/src/app/core/section-header/section-header.component.html
+++ b/client/src/app/core/section-header/section-header.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="$any (bcService.breadcrumbs$ | async) as breadcrumbs">
-  <section *ngIf="breadcrumbs[breadcrumbs.length-1].label !== 'Home'" class="py-5 bg-dark bg-opacity-10" style="margin-top: 103px;">
+  <section *ngIf="breadcrumbs[breadcrumbs.length-1].label !== 'Home'" class="py-5 bg-dark bg-opacity-10" style="margin-top: 140px; margin-bottom: 10px;">
     <div class="container">
       <div class="row d-flex align-items-center">
         <div class="col-9">
